src/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Nbr__c</fullName>
        <label>Bank Account Nbr</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_bal__c</fullName>
        <label>Bank_bal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>account_name__c</fullName>
        <label>account_name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Bank_Account</label>
    <nameField>
        <label>Bank_Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank_Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>